wrapped card block to make margins, changed selector for wrapper, fixed mistakes

--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -5,14 +5,6 @@
   border: 1px solid #f3f3f3;
   border-radius: 5px;
 
-  &:nth-child(4n) {
-    margin-right: 0;
-  }
-
-  &:nth-last-child(-n + 4) {
-    margin-top: 46px;
-  }
-
   &__image {
     display: block;
     margin-left: auto;
@@ -64,7 +56,6 @@
 
   &__button {
     display: block;
-    width: 166px;
     height: 40px;
     margin-top: 16px;
     box-sizing: border-box;
