--- a/src/styles/components/cards.scss
+++ b/src/styles/components/cards.scss
@@ -1,11 +1,22 @@
 .product-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
 
   box-sizing: border-box;
   width: getListSize($card-width, $card-margin, 4);
   margin-left: auto;
   margin-right: auto;
   padding-top: 50px;
+
+  &__item {
+    margin-right: $card-margin;
+
+    &:nth-child(4n) {
+      margin-right: 0;
+    }
+
+    &:not(:nth-child(-n + 4)) {
+      margin-top: 46px;
+    }
+  }
 }
